Added id  'Please_Clap' and styled using CSS

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 <div class="modal fade" id="sign-in-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
-        <div class="modal-body-fluid">
+        <div id="please_clap" class="modal-body-fluid">
           <div class="container-fluid">
             <div class="row d-flex mb-5">
               <div id="sign-up-graphic" class="col bg-primary text-white p-5 d-flex flex-column justify-content-around">
@@ -302,7 +302,7 @@
                     <img src="./images/password.svg" alt="password">
                   </div>
                   <div id="sign-in-sign-in-button" class="my-3">
-                    <button type="button" class="btn btn-primary fw-bold d-flex px-5 justify-content-center align-items-center" data-bs-dismiss="modal">Sign in</button>
+                    <button type="button" class="btn btn-primary fw-bold d-flex px-5 justify-content-center" data-bs-dismiss="modal">Sign in</button>
                   </div>
                   <div>
                     <p>Or sign in with social media</p>
