--- a/modal_test.html
+++ b/modal_test.html
@@ -93,7 +93,7 @@
 <!-- Sign In Modal-->
 <div class="modal fade" id="sign-in-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-lg">
-        <div class="modal-content">
+        <div id="please_clap" class="modal-content">
           <div class="modal-body-fluid">
             <div class="container-fluid">
               <div class="row d-flex mb-5">
