--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
       <div class="modal-content">
         <div class="modal-body-fluid">
           <div class="container-fluid">
-            <div class="row d-flex mb-5">
+            <div class="row d-flex py-5">
               <div id="sign-up-graphic" class="col bg-primary text-white p-5 d-flex flex-column justify-content-around">
                   <h5 class="d-flex justify-content-center fw-bold mb-3">Don't have an account yet?</h2>
                   <h5 class="d-flex justify-content-center fw-bold mb-0">What are you waiting for?!</h2>
