--- a/features.html
+++ b/features.html
@@ -290,7 +290,7 @@
 <div class="modal fade" id="sign-in-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
-        <div class="modal-body-fluid">
+        <div id="please_clap" class="modal-body-fluid">
           <div class="container-fluid">
             <div class="row d-flex mb-5">
               <div id="sign-up-graphic" class="col bg-primary text-white p-5 d-flex flex-column justify-content-around">
@@ -333,7 +333,6 @@
       </div>
     </div>
   </div>
-
   <div class="modal fade" id="sign-up-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
