--- a/index.html
+++ b/index.html
@@ -274,12 +274,12 @@
 
 <!-- Sign In Modal-->
 
-<div class="modal fade" id="sign-in-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<<div class="modal fade" id="sign-in-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <div id="please_clap" class="modal-body-fluid">
           <div class="container-fluid">
-            <div class="row d-flex py-5">
+            <div class="row d-flex mb-5">
               <div id="sign-up-graphic" class="col bg-primary text-white p-5 d-flex flex-column justify-content-around">
                   <h5 class="d-flex justify-content-center fw-bold mb-3">Don't have an account yet?</h2>
                   <h5 class="d-flex justify-content-center fw-bold mb-0">What are you waiting for?!</h2>
