--- a/pricing.html
+++ b/pricing.html
@@ -282,7 +282,7 @@
 <div class="modal fade" id="sign-in-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
-        <div class="modal-body-fluid">
+        <div id="please_clap" class="modal-body-fluid">
           <div class="container-fluid">
             <div class="row d-flex mb-5">
               <div id="sign-up-graphic" class="col bg-primary text-white p-5 d-flex flex-column justify-content-around">
