--- a/index.html
+++ b/index.html
@@ -260,9 +260,7 @@
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 <h1>Chat With Us</h1>
                                 <textarea placeholder="Type message.." name="msg" required></textarea>
-                                <button type="button" class="chat__send__btn">Send<svg width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M15.6652 8.80884C16.1116 8.36246 16.1116 7.63754 15.6652 7.19116L8.80884 0.334784C8.36246 -0.111595 7.63754 -0.111595 7.19116 0.334784C6.74478 0.781163 6.74478 1.50608 7.19116 1.95246L13.2405 8.00179L7.19473 14.0511C6.74835 14.4975 6.74835 15.2224 7.19473 15.6688C7.64111 16.1152 8.36603 16.1152 8.81241 15.6688L15.6688 8.81241L15.6652 8.80884ZM1.95246 15.6652L8.80884 8.80884C9.25522 8.36246 9.25522 7.63754 8.80884 7.19116L1.95246 0.334784C1.50608 -0.111595 0.781163 -0.111595 0.334784 0.334784C-0.111595 0.781163 -0.111595 1.50608 0.334784 1.95246L6.38411 8.00179L0.338355 14.0511C-0.108024 14.4975 -0.108024 15.2224 0.338355 15.6688C0.784734 16.1152 1.50965 16.1152 1.95603 15.6688L1.95246 15.6652Z" fill="#0D6EFD"/>
-                                </svg></button>
+                                <button type="button" class="chat__send__btn">Send</button>
                                 <button type="button" class="chat__close__btn" data-bs-toggle="modal" data-bs-target="#chat-modal">Close</button>
                             </form>
                         </div>
@@ -278,7 +276,7 @@
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <div id="please_clap" class="modal-body-fluid">
-          <div class="container-fluid">
+          <div class="container-fluid d-flex">
             <div class="row d-flex mb-5">
               <div id="sign-up-graphic" class="col bg-primary text-white p-5 d-flex flex-column justify-content-around">
                   <h5 class="d-flex justify-content-center fw-bold mb-3">Don't have an account yet?</h2>
@@ -323,10 +321,10 @@
 
   <div class="modal fade" id="sign-up-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
-      <div class="modal-content">
+      <div class="modal-content d-flex">
         <div class="modal-body-fluid">
-          <div class="container-fluid">
-            <div class="row d-flex m-auto">
+          <div class="container-fluid d-flex">
+            <div class="row d-flex mb-5">
               <div id="sign-up-form" class="col d-flex flex-column justify-content-between align-items-center">
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 <h2 class="d-flex pt-5 mb-4 justify-content-center fw-bold" >Sign Up</h2>
