--- a/index.html
+++ b/index.html
@@ -203,7 +203,16 @@
                             <p>Conversions</p>
                         </div>
                     </div><!-- mid card grid -->
-                    <div class="mid__content__card__container d-flex">
+
+                </div><!-- mid content container -->
+            </div><!-- middle row col -->
+        </div><!-- middle row -->
+        <div class="row m-auto">
+            <div class="col m-auto text-center">
+                <div class="mid__content__container">
+                    <h3>How It Works</h3>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+                    <div class="mid__content__card__container">
                         <div class="mid__content__card">
                             <div class="mid__card__content">
                                 <h4>Start accepting payments with ease</h4>
@@ -211,20 +220,21 @@
                                 <ul>
                                     <li>Process transactions in up to 32 different currencies</li>
                                     <li>Integrate with popular payment gateways like Stripe and Braintree</li>
-                                    <li>Accept credit & debit cards, PayPal, ACH, Apple Pay and more with the swipe of a finger</li>
+                                    <li>Accept credit &amp; debit cards, PayPal, ACH, Apple Pay and more with the swipe of a finger</li>
                                     <li>Select from a variety of different checkout options and experiences</li>
                                 </ul>
                                 <button><a href="how_it_works.html" style="text-decoration: none;color:none;">Learn more</a><svg width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M15.6652 8.80884C16.1116 8.36246 16.1116 7.63754 15.6652 7.19116L8.80884 0.334784C8.36246 -0.111595 7.63754 -0.111595 7.19116 0.334784C6.74478 0.781163 6.74478 1.50608 7.19116 1.95246L13.2405 8.00179L7.19473 14.0511C6.74835 14.4975 6.74835 15.2224 7.19473 15.6688C7.64111 16.1152 8.36603 16.1152 8.81241 15.6688L15.6688 8.81241L15.6652 8.80884ZM1.95246 15.6652L8.80884 8.80884C9.25522 8.36246 9.25522 7.63754 8.80884 7.19116L1.95246 0.334784C1.50608 -0.111595 0.781163 -0.111595 0.334784 0.334784C-0.111595 0.781163 -0.111595 1.50608 0.334784 1.95246L6.38411 8.00179L0.338355 14.0511C-0.108024 14.4975 -0.108024 15.2224 0.338355 15.6688C0.784734 16.1152 1.50965 16.1152 1.95603 15.6688L1.95246 15.6652Z" fill="#0D6EFD"/>
+                                    <path d="M15.6652 8.80884C16.1116 8.36246 16.1116 7.63754 15.6652 7.19116L8.80884 0.334784C8.36246 -0.111595 7.63754 -0.111595 7.19116 0.334784C6.74478 0.781163 6.74478 1.50608 7.19116 1.95246L13.2405 8.00179L7.19473 14.0511C6.74835 14.4975 6.74835 15.2224 7.19473 15.6688C7.64111 16.1152 8.36603 16.1152 8.81241 15.6688L15.6688 8.81241L15.6652 8.80884ZM1.95246 15.6652L8.80884 8.80884C9.25522 8.36246 9.25522 7.63754 8.80884 7.19116L1.95246 0.334784C1.50608 -0.111595 0.781163 -0.111595 0.334784 0.334784C-0.111595 0.781163 -0.111595 1.50608 0.334784 1.95246L6.38411 8.00179L0.338355 14.0511C-0.108024 14.4975 -0.108024 15.2224 0.338355 15.6688C0.784734 16.1152 1.50965 16.1152 1.95603 15.6688L1.95246 15.6652Z" fill="#0D6EFD"></path>
                                     </svg></button>
                             </div>
                             
-                            <img src="images/credit-card.png" alt="">
+                            <img id="card-2" src="images/credit-card.png" alt="">
                         </div>
                     </div>
+                    
                 </div><!-- mid content container -->
             </div><!-- middle row col -->
-        </div><!-- middle row -->
+        </div>
     </div><!-- container main -->
   </main>
   <footer>
