breakpoint and footer adjustmenmts

--- a/pricing.html
+++ b/pricing.html
@@ -233,8 +233,26 @@
     </div><!-- container main -->
   </main>
   <footer>
-    <!-- place footer here -->
-  </footer>
+    <div class="card text-white bg-primary text-center">
+        <div class="div-3 pt-4 card-title fw-bold">Try DoubleTap Today!</div>
+        <div class="card-body">
+          <h4 class="div-2 card-text fw-bold">Let's Get Started!</h4>
+          <div class="row">
+            <div class="footer__btn__grp">
+                <button data-bs-toggle="modal" data-bs-target="#sign-up-modal">Get started<svg width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M15.6652 8.80884C16.1116 8.36246 16.1116 7.63754 15.6652 7.19116L8.80884 0.334784C8.36246 -0.111595 7.63754 -0.111595 7.19116 0.334784C6.74478 0.781163 6.74478 1.50608 7.19116 1.95246L13.2405 8.00179L7.19473 14.0511C6.74835 14.4975 6.74835 15.2224 7.19473 15.6688C7.64111 16.1152 8.36603 16.1152 8.81241 15.6688L15.6688 8.81241L15.6652 8.80884ZM1.95246 15.6652L8.80884 8.80884C9.25522 8.36246 9.25522 7.63754 8.80884 7.19116L1.95246 0.334784C1.50608 -0.111595 0.781163 -0.111595 0.334784 0.334784C-0.111595 0.781163 -0.111595 1.50608 0.334784 1.95246L6.38411 8.00179L0.338355 14.0511C-0.108024 14.4975 -0.108024 15.2224 0.338355 15.6688C0.784734 16.1152 1.50965 16.1152 1.95603 15.6688L1.95246 15.6652Z"/>
+                    </svg></button>
+                <button data-bs-toggle="modal" data-bs-target="#chat-modal">Chat with us<svg width="19" height="17" viewBox="0 0 19 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M4.025 12.1714L3.63929 13.2036L3.38929 13.8643L5.44643 13.2464L5.94286 13.0964L6.43929 13.2464C7.27143 13.5 8.18214 13.6393 9.14286 13.6393C13.5964 13.6393 16.5714 10.7643 16.5714 7.925C16.5714 5.08571 13.5964 2.21071 9.14286 2.21071C4.68929 2.21071 1.71429 5.08929 1.71429 7.92857C1.71429 9.18214 2.25 10.3893 3.24643 11.3893L4.025 12.1714ZM2.63214 15.8821L0.571429 16.5L1.32857 14.4821L2.03571 12.6C0.760714 11.325 0 9.7 0 7.92857C0 3.825 4.09286 0.5 9.14286 0.5C14.1929 0.5 18.2857 3.825 18.2857 7.92857C18.2857 12.0321 14.1929 15.3571 9.14286 15.3571C8.01786 15.3571 6.93929 15.1929 5.94286 14.8893L2.63571 15.8821H2.63214Z"/>
+                    </svg></button>
+            </div>
+          </div>
+        </div>
+        <div class="row pb-5">
+            <p class="features">Free 14 day trial <span class="white__dot"> </span>Manage customers in minutes <span class="white__dot"></span> Cancel at any time</p>
+        </div>
+      </div>
+</footer>
   <!-- Bootstrap JavaScript Libraries -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
