--- a/how_it_works.html
+++ b/how_it_works.html
@@ -13,7 +13,7 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg shadow">
+    <nav class="navbar navbar-expand-lg fixed-top shadow">
         <div class="container-fluid">
             <div class="logo__container">
                 <a class="navbar-brand" href="#"><img src="images/logo_sliding.png " alt=""></a>
