--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg shadow">
+    <nav class="navbar navbar-expand-lg fixed-top shadow">
         <div class="container-fluid">
             <div class="logo__container">
                 <a class="navbar-brand" href="#"><img src="images/logo_sliding.png " alt=""></a>
@@ -320,7 +320,6 @@
     </div><!-- container main -->
   </main>
   <footer>
-    
         <div class="card text-white bg-primary text-center">
             <div class="div-3 pt-4 card-title fw-bold">Try DoubleTap Today!</div>
             <div class="card-body">
