--- a/how_it_works.html
+++ b/how_it_works.html
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-expand-lg fixed-top shadow">
         <div class="container-fluid">
             <div class="logo__container">
-                <a class="navbar-brand" href="#"><img src="images/logo_sliding.png " alt=""></a>
+                <a class="navbar-brand" href="index.html"><img src="images/logo_sliding.png " alt=""></a>
             </div>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
