--- a/support.html
+++ b/support.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Landing</title>
+  <title>DoubleTap Support</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-expand-lg fixed-top shadow">
         <div class="container-fluid">
             <div class="logo__container">
-                <a class="navbar-brand" href="#"><img src="images/logo_sliding.png " alt=""></a>
+                <a class="navbar-brand" href="index.html"><img src="images/logo_sliding.png " alt=""></a>
             </div>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
